# terminal-snake-rs

./: Cargo.toml  LICENSE  README.md  debug.txt
src/: entity.rs  game_error.rs  main.rs
